# kobo2anki

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
kobo2anki/: caching.py  errors.py  image_searcher.py  language_processor.py  main.py  model.py  pronunciation.py
kobo2anki/anki/: anki.py  model.py  template.py
kobo2anki/dicts/: __init__.py  errors.py  model.py
kobo2anki/dicts/freedict/: client.py  pronunciation_guesser.py
kobo2anki/dicts/oxforddictionaries/: client.py  parser.py
kobo2anki/kobo/: __init__.py  db.py  errors.py  model.py  reader.py
tests/: conftest.py  test_caching.py  test_kobo2anki.py  test_main.py  test_pronunciation.py
tests/anki/: test_anki.py  test_model.py
tests/dicts/freedict/: test_client.py
tests/dicts/oxforddictionaries/: data.py  test_client.py  test_parser.py
tests/kobo/: test_db.py  test_reader.py
tests/kobo/data/: test_db.sqlite
tests/stubs/: dict.py  kobo.py
