[tool.poetry]
name = "kobo2anki"
version = "0.1.0"
description = ""
authors = ["Anton Tinyakov <anlorn@anlorn.com>"]

[tool.poetry.dependencies]
python = "^3.11"
genanki = "^0.13.0"
requests = "^2.32.2"
appdirs = "^1.4.4"
google-images-search = "^1.4.6"
nltk = "^3.8.1"
click = "^8.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
ipython = "^8.10.0"
ipdb = "^0.13.11"
pytest-icdiff = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
